<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save and Return"
            android:textSize="16dp"
            android:textColor="@color/irasBlue"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/editHeroImage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/ic_edit_blue"
        android:alpha="0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/revEditHeader"
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_revenue"
        android:textAlignment="center"
        android:textSize="32sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/irasBlue"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/editHeroImage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="12dp"
        android:background="@color/gray_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/revNameTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/revenue_name"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/revNameEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/name_of_company_or_grant"
            android:textSize="16sp"
            android:textColor="@color/darkBlueFont"
            android:textAlignment="viewStart"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            android:paddingHorizontal="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/revNameTitle"/>
        <TextView
            android:id="@+id/revTypeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/revenue_type"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/revNameEntry" />
        <Spinner
            android:id="@+id/revTypeEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="16sp"
            android:textColor="@color/darkBlueFont"
            android:textAlignment="viewStart"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/revTypeTitle" />
        <TextView
            android:id="@+id/revAmtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/revTypeEntry" />
        <EditText
            android:id="@+id/revAmtEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/amount_of_revenue_received"
            android:textSize="16sp"
            android:textColor="@color/darkBlueFont"
            android:textAlignment="viewStart"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            android:paddingHorizontal="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/revAmtTitle"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>