<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:background="@color/gray_bg"
    android:paddingHorizontal="8dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/revTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        android:text="@string/revenue"
        android:textSize="16sp"
        android:textColor="@color/darkBlueFont"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/statementRevAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingVertical="4dp"
        android:text="$0"
        android:textSize="18sp"
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toBottomOf="@id/revTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/gplTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/grossProfitLoss"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        android:background="@color/white"
        android:textSize="16sp"
        android:textColor="@color/darkBlueFont"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/statementRevAmt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/statementgplAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingEnd="8dp"
        android:paddingVertical="4dp"
        android:text="$0"
        android:textSize="18sp"
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toBottomOf="@id/gplTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/allowableTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/allowableExpenses"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        android:background="@color/white"
        android:textSize="16sp"
        android:textColor="@color/darkBlueFont"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/statementgplAmt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/allowableAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingEnd="8dp"
        android:paddingVertical="4dp"
        android:text="$0"
        android:textSize="18sp"
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toBottomOf="@id/allowableTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/adjProfitLossTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        android:text="@string/adjProfitLoss"
        android:textSize="16sp"
        android:textColor="@color/darkBlueFont"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/allowableAmt"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/adjProfitLossAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingVertical="4dp"
        android:text="$0"
        android:textSize="18sp"
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toBottomOf="@id/adjProfitLossTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>