<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/editHeroImage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/ic_edit_blue"
        android:alpha="0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/jobEditHeader"
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_jobs"
        android:textAlignment="center"
        android:textSize="32sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/irasBlue"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/editHeroImage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="12dp"
        android:background="@color/gray_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/jobNameTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/job_name"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/jobNameEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="Name of company"
            android:textSize="16sp"
            android:textColor="@color/darkBlueFont"
            android:textAlignment="viewStart"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            android:paddingHorizontal="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jobNameTitle"/>
        <TextView
            android:id="@+id/jobTypeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/job_type"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jobNameEntry" />
        <Spinner
            android:id="@+id/jobTypeEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="Name of company"
            android:textSize="16sp"
            android:textColor="@color/darkBlueFont"
            android:textAlignment="viewStart"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jobTypeTitle"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>